#577 | Jaideep | Fixed issue of page header breaking on smaller resolutions

--- a/modules/openlmis-web/src/main/webapp/public/less/header.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/header.less
@@ -2,7 +2,7 @@
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
   border-bottom: 1px solid #E5EBE2;
   color: #4a4a4a;
-  height: 66px;
+  min-height: 66px;
   position: relative;
   z-index: 3;
   background: #DDD; /* Old browsers */
@@ -23,7 +23,6 @@
     font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
     line-height: 29px;
     margin: 10px 0 0 2px;
-    float: left;
     color: #747474;
     text-shadow: 0 1px 0 #FFF;
   }
